<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/pref_username_default"
        android:inputType="text"
        android:key="@string/pref_key_username"
        android:singleLine="true"
        android:title="@string/pref_key_username" />

    <EditTextPreference
        android:defaultValue="@string/pref_temp_user2name_default"
        android:inputType="text"
        android:key="@string/pref_temp_user2name"
        android:singleLine="true"
        android:title="@string/pref_temp_user2name" />

    <ListPreference
        android:defaultValue="@string/pref_isVisible_default"
        android:entries="@array/pref_isVisible_options"
        android:entryValues="@array/pref_isVisible_values"
        android:key="@string/pref_key_isVisible"
        android:singleLine="true"
        android:title="@string/pref_label_isVisible" />

</PreferenceScreen>
